@@ -1,4 +1,6 @@
 v1.6, not yet released
+  * define and use t4s_unset() to work around another NetBSD shell
+    bug:  http://gnats.netbsd.org/49595
 
 v1.5, released 2016-02-20
   * remove some unneeded quotes to work around a NetBSD shell bug:
